--- a/docker-compose_rsync.yml
+++ b/docker-compose_rsync.yml
@@ -5,9 +5,10 @@ services:
     container_name: ${CONTAINER_HOST_NAME:-standalone.rsync}
     environment:
       - RSYNC_HOSTS_ALLOW=${RSYNC_HOSTS_ALLOW:-192.168.0.0/24 192.168.1.0/24 192.168.8.0/24 192.168.24.0/24 172.16.0.0/12 127.0.0.1/32}
-      - RSYNC_PASSWORD=${RSYNC_PASSWORD:-rsync_user_pass}
-      - RSYNC_USERNAME=${RSYNC_USERNAME:-rsync_user}
-      - RSYNC_VOLUME_PATH=${RSYNC_VOLUME_PATH:-/data}
+      - RSYNC_PASSWORD=${RSYNC_PASSWORD:-comeonFrance!:-)}
+      - RSYNC_USERNAME=${RSYNC_USERNAME:-root}
+      - RSYNC_VOLUME_NAME=${RSYNC_VOLUME_NAME:-volume}
+      - RSYNC_VOLUME_PATH=${RSYNC_VOLUME_PATH:-/volume}
     hostname: ${CONTAINER_HOST_NAME:-standalone.rsync}
     image: ${IMAGE_PREFIX:-cirepo/}${IMAGE_NAME:-rsync}:${IMAGE_TAG:-latest}
     network_mode: bridge
@@ -16,10 +17,10 @@ services:
       - "${EXTERNAL_SSH_22_PORT:-22}:22"
     restart: always
     volumes:
-      - data:/data
+      - data:${RSYNC_VOLUME_PATH:-/volume}
       - dot_ssh:/root/.ssh
       - host_user_dot_ssh:/root/host_dot_ssh
-      - pwd:${PWD}
+      - pwd:${RSYNC_VOLUME_PATH:-/volume}${PWD}
 
 volumes:
   data:
