--- a/pom.xml
+++ b/pom.xml
@@ -147,10 +147,10 @@ under the License.
       </properties>
     </profile>
     <profile>
-      <id>gitflow</id>
+      <id>git-commit-id</id>
       <activation>
         <file><exists>${basedir}/.git</exists></file>
-        <property><name>!gitflow.disabled</name></property>
+        <property><name>!git-commit-id.disabled</name></property>
       </activation>
       <build>
         <pluginManagement>
@@ -386,6 +386,8 @@ under the License.
               <artifactId>maven-deploy-plugin</artifactId>
               <configuration><skip>true</skip></configuration>
             </plugin>
+            <plugin><groupId>org.codehaus.mojo</groupId><artifactId>build-helper-maven-plugin</artifactId><version>${version.build-helper-maven-plugin}</version></plugin>
+            <plugin><groupId>org.codehaus.mojo</groupId><artifactId>wagon-maven-plugin</artifactId><version>${version.wagon-maven-plugin}</version></plugin>
           </plugins>
         </pluginManagement>
         <plugins>
@@ -548,6 +550,20 @@ under the License.
           </plugin>
         </plugins>
       </build>
+      <pluginRepositories>
+        <pluginRepository>
+          <id>github-mvn-repo-wagon-maven-plugin</id>
+          <url>https://raw.github.com/ci-and-cd/wagon-maven-plugin/mvn-repo/</url>
+          <name>Forked wagon-maven-plugin that can merge snapshots metadata correctly</name>
+          <layout>default</layout>
+          <snapshots><enabled>true</enabled><updatePolicy>daily</updatePolicy></snapshots>
+          <releases><enabled>true</enabled><updatePolicy>never</updatePolicy></releases>
+        </pluginRepository>
+      </pluginRepositories>
+      <properties>
+        <version.build-helper-maven-plugin>3.0.0</version.build-helper-maven-plugin>
+        <version.wagon-maven-plugin>wagon-maven-plugin-2.0.1-snapshot-chshawkn-1.6</version.wagon-maven-plugin>
+      </properties>
     </profile>
   </profiles>
 
