default -o StrictHostKeyChecking=no. fix rsyncd config in vagrant vm. fix RsyncListParser.

--- a/docker-compose_rsync.yml
+++ b/docker-compose_rsync.yml
@@ -4,7 +4,7 @@ services:
   image:
     container_name: ${CONTAINER_HOST_NAME:-standalone.rsync}
     environment:
-      - RSYNC_HOSTS_ALLOW=${RSYNC_HOSTS_ALLOW:-192.168.0.0/24 192.168.1.0/24 192.168.8.0/24 192.168.24.0/24 172.16.0.0/12 127.0.0.1/32}
+      - RSYNC_HOSTS_ALLOW=${RSYNC_HOSTS_ALLOW:-192.168.0.0/24 192.168.1.0/24 192.168.8.0/24 192.168.24.0/24 172.16.0.0/12 172.17.0.0/16 127.0.0.1/32 ::1}
       - RSYNC_PASSWORD=${RSYNC_PASSWORD:-comeonFrance!:-)}
       - RSYNC_USERNAME=${RSYNC_USERNAME:-root}
       - RSYNC_VOLUME_NAME=${RSYNC_VOLUME_NAME:-volume}
