--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,6 @@ before_install:
     sudo usermod -a -G docker $(whoami) || echo user $(whoami) already in group docker;
     docker system prune -af;
     sudo netstat -anop;
-    sudo service ssh stop;
     if [[ ! -f ~/.ssh/id_rsa ]]; then cp src/test/ssh-keys/* ~/.ssh/; chmod 400 ~/.ssh/id_rsa*; chmod 644 ~/.ssh/id_rsa*.pub; fi;
     ls -la ~/.ssh/;
     docker-compose -f docker-compose_rsync.yml up -d;
@@ -89,7 +88,7 @@ script:
   # see: https://github.com/travis-ci/travis-ci/issues/4190 or https://github.com/HaxeFoundation/hxcpp/issues/709
   - while sleep 9m; do echo "=====[ $SECONDS seconds still running ]====="; done &
   #      ./mvnw -e ${MAVEN_GLOBAL_SETTINGS} -s settings.xml -Dgpg.executable=gpg -Dgpg.loopback=true -Dnexus2.staging=true clean deploy;
-  - time ./mvnw -e ${MAVEN_GLOBAL_SETTINGS} -s settings.xml -Dgpg.executable=gpg2 -Dgpg.loopback=true -Dnexus2.staging=true -Dtest.user=root -Duser.name=root -Dssh-tests clean deploy;
+  - time ./mvnw -e ${MAVEN_GLOBAL_SETTINGS} -s settings.xml -Dgpg.executable=gpg2 -Dgpg.loopback=true -Dnexus2.staging=true -Dssh-tests -Dtest.rsyncdPort=8873 -Dtest.sshPort=8022 -Dtest.user=root -Duser.name=root clean deploy;
     if type -p column > /dev/null; then find .mvn/profiler-report -name "*.json" | xargs cat | jq -r '.projects[]|"module:", .project, "plugins", (.mojos[]|[.mojo,.time]|@tsv)' | column -t; fi; rm -rf .mvn/profiler-report;
     time ./mvnw -e ${MAVEN_GLOBAL_SETTINGS} -ntp -s settings.xml -Dcustom.nexus3=https://nexus3.infra.top/nexus/ -Dfast=true -Dinfrastructure=custom -Dmaven.clean.skip=true -Dmaven.install.skip=true -Dmaven.packages.skip=true -Dnexus2.staging=false deploy;
     if type -p column > /dev/null; then find .mvn/profiler-report -name "*.json" | xargs cat | jq -r '.projects[]|"module:", .project, "plugins", (.mojos[]|[.mojo,.time]|@tsv)' | column -t; fi; rm -rf .mvn/profiler-report;
